1-tg_web.tf
resource "aws_lb_target_group" "target-grp-web" {
  name = var.tg-web-name
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.vpc.id
  health_check {
    path = "/"
    matcher = 200
  }
}

resource "aws_lb_listener" "alb-listener-web" {
  load_balancer_arn = aws_lb.alb-web.arn
  port = 80
  protocol = "HTTP"
  
  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.target-grp-web.arn
  }
}
